--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "Make CAS great again",
   "license": "MIT",
   "scripts": {
-    "prettier": "prettier --write '**/*.{js,json,md}' && gulp all"
+    "format": "prettier --write '**/*.{js,json,md}' && gulp all"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
     "eslint": "^7.25.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.4.0",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-debug": "^4.0.0",
+    "gulp-eslint": "^6.0.0",
     "gulp-prettier": "^3.0.0",
     "gulp-rename": "^2.0.0",
     "prettier": "^2.2.1"
