--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/CAS/CAS",
     "pages/personal/personal",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/changeinfo/changeinfo"
   ],
   "window": {
     "backgroundTextStyle": "light",
