Finished the club system structure
Finished the club system structure, meaning that the basic structure of this miniprogram is finished.

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -21,6 +21,12 @@
         {
           "name": "pages/changeinfo/changeinfo",
           "pathName": "pages/changeinfo/changeinfo",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/CAS/CAS",
+          "pathName": "pages/CAS/CAS",
           "scene": null
         }
       ]
